[#2] Added Rails view 'index' with js 'header' with translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,4 @@
 en:
-  "EXAMPLE_TRANSLATE": "Example translate"
+  "HEADER_LOGO": "Shop"
+  "HEADER_ACCOUNT": "Your account"
+  "HEADER_SEARCH_PRODUCTS_PLACEHOLDER": "Search products"
