[#4] deleted navigation functions in ctrl, added 'user edit' template and ctrl, added ng-touched class to errors, added user_representer

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -9,8 +9,6 @@ pl:
   "SESSION_NEW_SIGN_IN_WITH_FACEBOOK": "Zaloguj się z facebook"
   "SESSION_NEW_SIGN_IN_WITH_GOOGLE": "Zaloguj się z google+"
   "SESSION_NEW_SIGN_IN": "Zaloguj się"
-  "SESSION_NEW_EMAIL_PLACEHOLDER": "Email"
-  "SESSION_NEW_PASSWORD_PLACEHOLDER": "Hasło"
   "SESSION_NEW_REMEMBER_PASSWORD": "Zapamiętaj mnie"
   "SESSION_NEW_SIGN_IN": "Zaloguj"
   "SESSION_NEW_SIGN_UP_TEXT": "Nie mam konta"
@@ -20,17 +18,39 @@ pl:
   # USERS
 
   "USER_NEW_SIGN_UP": "Zarejestruj się"
-  "USER_NEW_FIRST_NAME_PLACEHOLDER": "Imię*"
-  "USER_NEW_LAST_NAME_PLACEHOLDER": "Nazwisko*"
-  "USER_NEW_EMAIL_PLACEHOLDER": "Email*"
-  "USER_NEW_TEL_NUM_PLACEHOLDER": "Numer telefonu"
-  "USER_NEW_BIRTH_DATE_PLACEHOLDER": "Data urodzenia"
-  "USER_NEW_PASSWORD_PLACEHOLDER": "Hasło*"
-  "USER_NEW_PASSWORD_CONFIRMATION_PLACEHOLDER": "Potwierdzenie hasła*"
+  "FIRST_NAME_PLACEHOLDER": "Imię*"
+  "LAST_NAME_PLACEHOLDER": "Nazwisko*"
+  "EMAIL_PLACEHOLDER": "Email*"
+  "TEL_NUM_PLACEHOLDER": "Numer telefonu"
+  "BIRTH_DATE_PLACEHOLDER": "Data urodz. (RRRR-MM-DD)"
+  "PASSWORD_PLACEHOLDER": "Hasło*"
+  "PASSWORD_CONFIRMATION_PLACEHOLDER": "Potwierdzenie hasła*"
   "USER_NEW_REQUIRED": "* Wymagane pola"
   "USER_NEW_SIGN_UP": "Zarejestruj się"
   "USER_NEW_LOGIN_TEXT": "Masz konto"
   "USER_NEW_NEW_LOGIN": "Zaloguj się"
+
+  "ERROR_FIRST_NAME_REQUIRED": "Imię jest wymagane"
+  "ERROR_FIRST_NAME_PATTERN": "Imię ma zły format"
+  "ERROR_FIRST_NAME_SHORT": "Imię jest zbyt krótkie"
+  "ERROR_FIRST_NAME_LONG": "Imię jest zbyt długie"
+  "ERROR_LAST_NAME_REQUIRED": "Nazwisko jest wymagane"
+  "ERROR_LAST_NAME_PATTERN": "Nazwisko ma zły format"
+  "ERROR_LAST_NAME_SHORT": "Nazwisko jest zbyt krótkie"
+  "ERROR_LAST_NAME_LONG": "Nazwisko jest zbyt długie"
+  "ERROR_EMAIL_REQUIRED": "Email jest wymagany."
+  "ERROR_EMAIL_INVALID": "Email jest nieprawidłowy."
+  "ERROR_EMAIL_EXISTS": "Email już istnieje."
+  "ERROR_TEL_NUM_SHORT": "Numer telefonu musi zbyt krótki"
+  "ERROR_TEL_NUM_PATTERN": "Numer telefonu musi składać się z cyfr"
+  "ERROR_BIRTH_DATE_PATTERN": "Format daty jest niepoprawny (RRRR-MM-DD)"
+  "ERROR_PASSWORD_REQUIRED": "Hasło jest wymagane."
+  "ERROR_PASSWORD_SHORT": "Hasło jest zbyt krótkie."
+  "ERROR_PASSWORD_MISMATCH": "Potwierdznie hasła nie pasuje do hasła."
+
+  "USER_EDIT_SUCCESS": "Dane zostały pomyślnie zmienione"
+  "USER_EDIT_TITLE": "Moje dane"
+  "USER_EDIT_UPDATE": "Zapisz zmiany"
 
   session_controller:
     "activate_email": "Proszę sprawdzić email i aktywować konto"
