--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,8 +9,6 @@ en:
   "SESSION_NEW_SIGN_IN_WITH_FACEBOOK": "Login with facebook"
   "SESSION_NEW_SIGN_IN_WITH_GOOGLE": "Login with google+"
   "SESSION_NEW_SIGN_IN": "Login"
-  "SESSION_NEW_EMAIL_PLACEHOLDER": "Email"
-  "SESSION_NEW_PASSWORD_PLACEHOLDER": "Password"
   "SESSION_NEW_REMEMBER_PASSWORD": "Remember me"
   "SESSION_NEW_SIGN_IN": "Login"
   "SESSION_NEW_SIGN_UP_TEXT": "I don't have an account"
@@ -20,17 +18,39 @@ en:
   # USERS
 
   "USER_NEW_SIGN_UP": "Register"
-  "USER_NEW_FIRST_NAME_PLACEHOLDER": "First name*"
-  "USER_NEW_LAST_NAME_PLACEHOLDER": "Last name*"
-  "USER_NEW_EMAIL_PLACEHOLDER": "Email*"
-  "USER_NEW_TEL_NUM_PLACEHOLDER": "Telephone number"
-  "USER_NEW_BIRTH_DATE_PLACEHOLDER": "Birth date"
-  "USER_NEW_PASSWORD_PLACEHOLDER": "Password*"
-  "USER_NEW_PASSWORD_CONFIRMATION_PLACEHOLDER": "Password confirmation*"
+  "FIRST_NAME_PLACEHOLDER": "First name*"
+  "LAST_NAME_PLACEHOLDER": "Last name*"
+  "EMAIL_PLACEHOLDER": "Email*"
+  "TEL_NUM_PLACEHOLDER": "Telephone number"
+  "BIRTH_DATE_PLACEHOLDER": "Birth date (YYYY-MM-DD)"
+  "PASSWORD_PLACEHOLDER": "Password*"
+  "PASSWORD_CONFIRMATION_PLACEHOLDER": "Password confirmation*"
   "USER_NEW_REQUIRED": "* Required fields"
   "USER_NEW_SIGN_UP": "Register"
   "USER_NEW_LOGIN_TEXT": "You have an account"
   "USER_NEW_NEW_LOGIN": "Login now"
+
+  "ERROR_FIRST_NAME_REQUIRED": "First name is required"
+  "ERROR_FIRST_NAME_PATTERN": "First name is invalid"
+  "ERROR_FIRST_NAME_SHORT": "First name is too short"
+  "ERROR_FIRST_NAME_LONG": "First name is too long"
+  "ERROR_LAST_NAME_REQUIRED": "Last name is required"
+  "ERROR_LAST_NAME_PATTERN": "Last name is invalid"
+  "ERROR_LAST_NAME_SHORT": "Last name is too short"
+  "ERROR_LAST_NAME_LONG": "Last name is too long"
+  "ERROR_EMAIL_REQUIRED": "Email is required."
+  "ERROR_EMAIL_INVALID": "Email is invalid."
+  "ERROR_EMAIL_EXISTS": "Email already exists."
+  "ERROR_TEL_NUM_SHORT": "Telephone number is too short"
+  "ERROR_TEL_NUM_PATTERN": "Telephone number must contain only digits"
+  "ERROR_BIRTH_DATE_PATTERN": "Date format is invalid (YYYY-MM-DD)"
+  "ERROR_PASSWORD_REQUIRED": "Password is required."
+  "ERROR_PASSWORD_SHORT": "Password is too short."
+  "ERROR_PASSWORD_MISMATCH": "Password confirmation don't match password."
+
+  "USER_EDIT_SUCCESS": "Data have successfully updated"
+  "USER_EDIT_TITLE": "My data"
+  "USER_EDIT_UPDATE": "Save changes"
 
   session_controller:
       "activate_email": "Please check your email and activate account"
