--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -22,10 +22,14 @@ pl:
   "USER_NEW_LOGIN_TEXT": "Masz konto"
   "USER_NEW_NEW_LOGIN": "Zaloguj się"
 
-  "USER_EDIT_SUCCESS": "Dane zostały pomyślnie zmienione"
+  "USER_EDIT_DATA_ALERT_SUCCESS": "Dane zostały pomyślnie zmienione"
+  "USER_EDIT_ADDRESS_ALERT_SUCCESS": "Adres został pomyślnie zmieniony"
   "USER_EDIT_TITLE": "Moje dane"
   "USER_EDIT_UPDATE": "Zapisz zmiany"
   "USER_EDIT_ADDRESS_TITLE": "Adres"
+  "USER_EDIT_HEADING_USER_DATA": "Dane użytkownika"
+  "USER_EDIT_HEADING_USER_ADDRESS": "Adres użytkownika"
+  "USER_EDIT_HEADING_USER_PASSWORD": "Zmień hasło"
 
   # PLACEHOLDERS
 
