--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -27,6 +27,7 @@ pl:
   "USER_EDIT_ADDRESS_ALERT_SUCCESS_EDIT": "Adres został pomyślnie zmieniony"
   "USER_EDIT_ADDRESS_ALERT_SUCCESS_DESTROY": "Adres został pomyślnie usunięty"
   "USER_EDIT_TITLE": "Moje dane"
+  "USER_EDIT_ADDRESS_NEW": "Nowy adres"
   "USER_EDIT_UPDATE": "Zapisz zmiany"
   "USER_EDIT_DELETE_ADDRESS": "Skasuj adres"
   "USER_EDIT_ADDRESS_TITLE": "Adres"
@@ -36,7 +37,6 @@ pl:
 
   # PLACEHOLDERS
 
-  "HEADER_SEARCH_PRODUCTS_PLACEHOLDER": "Szukaj produkty"
   "FIRST_NAME_PLACEHOLDER": "Imię*"
   "LAST_NAME_PLACEHOLDER": "Nazwisko*"
   "EMAIL_PLACEHOLDER": "Email*"
@@ -44,10 +44,11 @@ pl:
   "BIRTH_DATE_PLACEHOLDER": "Data urodz. (RRRR-MM-DD)"
   "PASSWORD_PLACEHOLDER": "Hasło*"
   "PASSWORD_CONFIRMATION_PLACEHOLDER": "Potwierdzenie hasła*"
-  "TOWN_PLACEHOLDER": "Miejscowość"
-  "STREET_PLACEHOLDER": "Ulica"
-  "POSTCODE_PLACEHOLDER": "Kod pocztowy (00-000)"
-  "HOUSE_NUM_PLACEHOLDER": "Numer domu/numer mieszkania"
+  "TEL_NUM_REQUIRED_PLACEHOLDER": "Numer telefonu*"
+  "TOWN_PLACEHOLDER": "Miejscowość*"
+  "STREET_PLACEHOLDER": "Ulica*"
+  "POSTCODE_PLACEHOLDER": "Kod pocztowy (00-000)*"
+  "HOUSE_NUM_PLACEHOLDER": "Numer domu/numer mieszkania*"
 
   # ERRORS
 
