--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -37,6 +37,7 @@ pl:
 
   # PLACEHOLDERS
 
+  "HEADER_SEARCH_PRODUCTS_PLACEHOLDER": "Szukaj produkty"
   "FIRST_NAME_PLACEHOLDER": "Imię*"
   "LAST_NAME_PLACEHOLDER": "Nazwisko*"
   "EMAIL_PLACEHOLDER": "Email*"
