[#6] Added 'product_index' page with ctrl, changec products_controller, improved products representers, added menu on hover in 'product_index' page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,7 @@ en:
   "ONEW_PASSWORD_CONFIRMATION_TOOLTIP": "New password confirmation*"
 
   "NG_REALLY_MESSAGE": "Are you sure?"
+  "CURRENCY": 'pln'
 
   mailer:
     activation_needed_email:
