--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -41,6 +41,8 @@ pl:
 
   # PRODUCTS
 
+  "PRODUCTS_SEARCH_NO_RESULTS": "Brak produktów spełniających wyszukiwanie."
+
   "PRODUCT_SHOW_BACK": "Wróć do kategorii"
   "PRODUCT_SHOW_COMPOSITION": "Skład"
   "PRODUCT_SHOW_RETURN": "Zwroty"
